Some road stuff.

--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/procedurality.jar" sourcepath="/procedurality"/>
+	<classpathentry kind="lib" path="lib/procedurality.jar" sourcepath="/procedurality/src"/>
 	<classpathentry kind="lib" path="lib/jme3/jME3-core.jar" sourcepath="/jme3"/>
 	<classpathentry kind="lib" path="lib/jme3/jME3-terrain.jar" sourcepath="/jme3"/>
 	<classpathentry kind="lib" path="lib/jme3/jME3-desktop.jar" sourcepath="/jme3/src"/>
